--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Project database (do not commit)
+users.txt
+
 # Mono auto generated files
 mono_crash.*
 
